--- a/MEInject/MEInject/Form1.ru.resx
+++ b/MEInject/MEInject/Form1.ru.resx
@@ -117,12 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>48, 20</value>
+  <data name="OpenBIOSButton.Text" xml:space="preserve">
+    <value>Открыть BIOS</value>
   </data>
-  <data name="fileToolStripMenuItem.Text" xml:space="preserve">
-    <value>Файл</value>
+  <data name="OpenMEButton.Text" xml:space="preserve">
+    <value>Открыть ME</value>
+  </data>
+  <data name="SaveButton.Text" xml:space="preserve">
+    <value>Сохранить новый BIOS</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Intel ME injector</value>
